[gd_scene load_steps=10 format=3 uid="uid://gxtrikf6p1ip"]

[ext_resource type="Script" path="res://Scripts/slime_roxo.gd" id="1_dfbqg"]
[ext_resource type="Texture2D" uid="uid://i828qt4e2kax" path="res://assets/sprites/slime_purple.png" id="2_o33b1"]
[ext_resource type="PackedScene" uid="uid://cy3uphtm4jrys" path="res://Scenes/killzone.tscn" id="3_ov5n3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6u6dc"]
atlas = ExtResource("2_o33b1")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hvn0p"]
atlas = ExtResource("2_o33b1")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4nkbm"]
atlas = ExtResource("2_o33b1")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_33f0i"]
atlas = ExtResource("2_o33b1")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_pb8b3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6u6dc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvn0p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4nkbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33f0i")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vsix8"]
size = Vector2(10, 13)

[node name="Slime" type="Node2D"]
script = ExtResource("1_dfbqg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_pb8b3")
autoplay = "default"
frame_progress = 0.636668

[node name="killzone" parent="." instance=ExtResource("3_ov5n3")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="killzone"]
position = Vector2(0, 5.5)
shape = SubResource("RectangleShape2D_vsix8")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, 6)
target_position = Vector2(9, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, 6)
target_position = Vector2(-9, 0)

[node name="RayCastDownLeft" type="RayCast2D" parent="."]
position = Vector2(-15, 0)
target_position = Vector2(0, 20)

[node name="RayCastDownRight" type="RayCast2D" parent="."]
position = Vector2(15, 0)
target_position = Vector2(0, 20)

[connection signal="death" from="killzone" to="." method="_on_killzone_death"]
